# auction-manager

./: .hgignore  CMakeLists.txt  Copyright.txt
getplayers/: parse.awk  players
main/: CMakeLists.txt  main.cpp  nfl.qrc
sqlite/: CMakeLists.txt
view/: CMakeLists.txt  confirmdialog.h  createteamdialog.h  mainwindow.h  owner.h  ownerinfo.h  ownermodel.h  parsesql.h  player.h  playermodel.h  settings.h  shouter.h  tradeplayerdialog.h  transaction.h  transtypes.h
view/include/: mainwindow.h
view/src/: confirmdialog.cpp  createteamdialog.cpp  mainwindow.cpp  ownerinfo.cpp  ownermodel.cpp  parsesql.cpp  player.cpp  playermodel.cpp  settings.cpp  shouter.cpp  tradeplayerdialog.cpp  transaction.cpp
view/ui/: confirm_purchase.ui  create_team.ui  defaultownerInfo.ui  mainform.ui  ownerInfo.ui  playertrade.ui
